# newarticlerecomm

./: .env.example  .gitignore  README.md  all_recommendations.xlsx  dist.rar  package-lock.json  package.json  pyproject.toml  requirements.txt  setup_utils.py  startup.sh  vue.config.js
.github/workflows/: azure-static-web-apps-blue-coast-0dcb29700.yml  azure-static-web-apps-brave-cliff-0b9f53a00.yml  azure-static-web-apps-nice-tree-0f2a4be10.yml  azure-static-web-apps-wonderful-mushroom-0d403d800.yml  main_articles-recommender.yml
api/: __init__.py  app.py  feed.py  main.py  recommendations.xlsx  test.py
api/api/v1/: api.py
api/api/v1/endpoints/: article.py  auth.py  main.py  user.py
api/core/: config.py  jwt.py  security.py  utils.py
api/crud/: __init__.py  article.py  base.py  crud_articles.py  user.py
api/db/: mongodb.py  mongodb_utils.py  recommendations.py
api/schemas/: __init__.py  article.py  articles.py  base_class.py  user.py
api/templates/: home.html
src/: App.vue  main.js
src/assets/: recommendations.xlsx
src/components/: Article.vue  Articles.vue  HelloWorld.vue  Logout.vue  Topics.vue
src/router/: index.js
src/store/: index.js
src/views/: Home.vue  Login.vue
