[tool.poetry]
name = "articles-recommender"
version = "0.1.0"
description = ""
authors = ["ralf-t <tabo.ralfmartin@ue.edu.ph>"]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.1.1"
pandas = "^1.4.3"
openpyxl = "^3.0.10"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.18.1"}
motor = "^3.0.0"
python-dotenv = "^0.20.0"
bcrypt = "^3.2.2"
passlib = "^1.7.4"
fastapi-jwt-auth = "^0.5.0"
python-multipart = "^0.0.5"
APScheduler = "^3.9.1"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
